--- a/app/src/main/res/drawable/bg_add_wechat_selector.xml
+++ b/app/src/main/res/drawable/bg_add_wechat_selector.xml
@@ -10,7 +10,7 @@
                     <corners android:radius="18dp"/>
                 </shape>
             </item>
-            <item android:drawable="@drawable/ic_cash"
+            <item android:drawable="@drawable/ic_wechat"
                 android:gravity="center_horizontal"
                 android:width="40dp"
                 android:height="40dp"
@@ -19,7 +19,7 @@
     </item>
     <item android:state_checked="false">
         <layer-list>
-            <item android:drawable="@drawable/ic_cash"
+            <item android:drawable="@drawable/ic_wechat"
                 android:gravity="center_horizontal"
                 android:width="35dp"
                 android:height="35dp"
