--- a/app/src/main/res/layout/dialog_add_bill.xml
+++ b/app/src/main/res/layout/dialog_add_bill.xml
@@ -195,7 +195,7 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/tv_beizhu"
+                    android:id="@+id/tv_remark"
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
                     android:textColor="#7E7E7E"
